--- a/main.tex
+++ b/main.tex
@@ -84,7 +84,7 @@
 
 \textbf{Aihack Thailand 2023 - Ai Hackathon} \hfill December 2023
 \begin{itemize}[noitemsep, topsep=0pt, partopsep=0pt, parsep=0pt]
-    \item Created a credit risk model using machine learning approach to forecast the Probability of Default (PD).
+    \item Created a credit risk model using a machine learning approach to forecast individuals who are likely to default.
     \item Performed data analysis, data pre-processing, and feature engineering using linear and tree-based models.
     \item Awarded 1st Prize Winner \& AUC Prize Winner.
 \end{itemize}
