--- a/main.tex
+++ b/main.tex
@@ -16,7 +16,7 @@
 \begin{center}
     {\Large \textbf{Pupipat Singkhorn}}\\
     693/120, Indy Condo, Itsaraphap 31 Road \textbullet \ Bangkok, 10600 \\
-    pupipat.sk@gmail.com \textbullet \ 082 642 9767 \textbullet\ \href{https://github.com/pupipatsk}{\faGithub\ github.com/pupipatsk}
+    pupipat.sk@gmail.com \textbullet \ 082 642 9767 \textbullet\ \href{www.linkedin.com/in/pupipatsk}{\faLinkedin\ LinkedIn.com/pupipatsk} \textbullet\ \href{https://github.com/pupipatsk}{\faGithub\ Github.com/pupipatsk}
 \end{center}
 % -------------------------------------------------- Education --- %
 \textbf{EDUCATION}
@@ -91,7 +91,8 @@
 
 \vspace{3pt}
 
-\textbf{Stock Return Forecasting with Portfolio Optimization Project} \hfill April-May 2024
+\textbf{Stock Return Forecasting with Portfolio Optimization Project} \hfill April-May 2024 \\
+{\footnotesize Pattern Recognition 2024 Class Final Project}
 \begin{itemize}[noitemsep, topsep=0pt, partopsep=0pt, parsep=0pt]
     \item Developed an Alpha Factor Model for stock return forecasting using Classical ML and LSTM networks.
     \item Designed and backtested quantitative trading strategies.
