--- a/main.tex
+++ b/main.tex
@@ -14,7 +14,7 @@
 \begin{document}
 % -------------------------------------------------- Header --- %
 \begin{center}
-    {\Large \textbf{Pupipat Singkhorn}}\\
+    \href{https://pupipatsk.github.io/Resume/}{\Large \textbf{Pupipat Singkhorn}} \\
     693/120, Indy Condo, Itsaraphap 31 Road \textbullet \ Bangkok, 10600 \\
     pupipat.sk@gmail.com \textbullet \ 082 642 9767 \textbullet\ \href{www.linkedin.com/in/pupipatsk}{\faLinkedin\ LinkedIn.com/pupipatsk} \textbullet\ \href{https://github.com/pupipatsk}{\faGithub\ Github.com/pupipatsk}
 \end{center}
