--- a/main.tex
+++ b/main.tex
@@ -1,17 +1,22 @@
 \documentclass[11pt]{article}
-\setlength{\parindent}{0pt}
-\usepackage{graphicx}
-\usepackage{hyperref}
-\hypersetup{ pdfborder = {0 0 0} }
-\usepackage{enumitem}
-\usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}
-\usepackage[left=1.06cm,top=1.7cm,right=1.06cm,bottom=0.49cm]{geometry}
-\usepackage{fontawesome5}
-\usepackage[dvipsnames]{xcolor}
+\usepackage[left=1cm, top=1cm, right=1cm, bottom=1cm]{geometry} % margins
+\setlength{\parindent}{0pt} % no indent
+\pagenumbering{gobble} % no page number
+
+\usepackage{enumitem} % lists
+\usepackage{hyperref} % hyperlinks
+\hypersetup{ pdfborder = {0 0 0} } % no link border
+
+\usepackage[utf8]{inputenc} % UTF-8 encoding
+\usepackage[T1]{fontenc} % font encoding
+
+\usepackage{graphicx} % images
+\usepackage{fontawesome5} % icons
+\usepackage[dvipsnames]{xcolor} % color
 
 
 \begin{document}
+
 % -------------------------------------------------- Header --- %
 \begin{center}
     \href{https://pupipatsk.github.io/Resume/}{\Large \textbf{Pupipat Singkhorn}} \\
@@ -101,14 +106,18 @@
 
 \vspace{3pt}
 
-\textbf{Google Data Analytics Professional Certificate} \hfill July 2023
-
-\vspace{3pt}
-
 \textbf{Participated in Business Case Competition} \hfill 2023
 \begin{itemize}[noitemsep, topsep=0pt, partopsep=0pt, parsep=0pt]
     \item \textit{Hult Prize at Chulalongkorn} - Developed a social enterprise Idea aligned with the UN SDGs.
-    \item \textit{Chulalongkorn Case Discovery x Ascend Money} - Formulated a competitive strategy for the TrueMoney financial services application.
+    \item \textit{Chulalongkorn Case Discovery x Ascend Money} - Formulated a strategy for financial services application.
+\end{itemize}
+
+\vspace{3pt}
+
+\textbf{Certifications}
+\begin{itemize}[noitemsep, topsep=0pt, partopsep=0pt, parsep=0pt]
+    \item \textit{Google Data Analytics Professional} - Issued by: Google via Coursera \hfill July 2023
+    \item \textit{Financial Engineering and Artificial Intelligence in Python} - Issued by: Udemy \hfill August 2023
 \end{itemize}
 
 % \vspace{6pt}
@@ -130,8 +139,8 @@
 
 \textbf{Technical Skills}\\
 \hspace*{7pt} Programming Language: Python, SQL, R, C++, C, Java, HTML, CSS, LaTex, Markdown\\
-\hspace*{7pt} Programming Libraries: PyTorch, Scikit-learn, Pandas, NumPy, Matplotlib, Seaborn\\
-\hspace*{7pt} Applications: Excel, Tableau, Power BI, Adobe Photoshop \& Lightroom, Git, GitHub
+\hspace*{7pt} Programming Libraries: PyTorch, Scikit-learn, Pandas, NumPy, Matplotlib, Seaborn, Plotly\\
+\hspace*{7pt} Applications: Excel, Power BI, Tableau, Adobe Photoshop \& Lightroom, Git, GitHub
 
 \textbf{Language:} Thai (Native), English
 
