--- a/main.tex
+++ b/main.tex
@@ -31,7 +31,7 @@
 
 \textbf{Chulalongkorn University} \hfill 2022 - Present
 
-\hspace*{7pt} Bachelor of Engineering - Computer Engineering Major. GPAX: 3.53\\
+\hspace*{7pt} Bachelor of Engineering - Computer Engineering Major.\\
 \hspace*{7pt} Relevant Coursework: Pattern Recognition, Algorithm Design, Data Structures, Programming Methodology
 
 \vspace{2pt}
@@ -116,7 +116,7 @@
 
 \textbf{Certifications}
 \begin{itemize}[noitemsep, topsep=0pt, partopsep=0pt, parsep=0pt]
-    \item \textit{Google Data Analytics Professional} - Issued by: Google via Coursera \hfill July 2023
+    \item \textit{Google Data Analytics Professional} - Issued by: Google \hfill July 2023
     \item \textit{Financial Engineering and Artificial Intelligence in Python} - Issued by: Udemy \hfill August 2023
 \end{itemize}
 
