--- a/main.tex
+++ b/main.tex
@@ -19,9 +19,12 @@
 
 % -------------------------------------------------- Header --- %
 \begin{center}
-    \href{https://pupipatsk.github.io/Resume/}{\Large \textbf{Pupipat Singkhorn}} \\
-    693/120, Indy Condo, Itsaraphap 31 Road \textbullet \ Bangkok, 10600 \\
-    pupipat.sk@gmail.com \textbullet \ 082 642 9767 \textbullet\ \href{www.linkedin.com/in/pupipatsk}{\faLinkedin\ LinkedIn.com/pupipatsk} \textbullet\ \href{https://github.com/pupipatsk}{\faGithub\ Github.com/pupipatsk}
+    {\Large \textbf{Pupipat Singkhorn}} \\
+    \faPhone* 082-642-9767 \textbullet \ 693/120, Indy Condo, Itsaraphap 31 Road, Bangkok 10600 \\
+    pupipat.sk@gmail.com
+    \textbullet\ \href{www.linkedin.com/in/pupipatsk}{\faLinkedin\ LinkedIn.com/pupipatsk}
+    \textbullet\ \href{https://github.com/pupipatsk}{\faGithub\ Github.com/pupipatsk}
+    \textbullet\ \href{https://pupipatsk.github.io/Resume/}{\faGlobe\ Personal Website}
 \end{center}
 % -------------------------------------------------- Education --- %
 \textbf{EDUCATION}
@@ -116,8 +119,9 @@
 
 \textbf{Certifications}
 \begin{itemize}[noitemsep, topsep=0pt, partopsep=0pt, parsep=0pt]
+    \item \textit{Machine Learning Specialization} - Issued by: DeepLearning.AI, Stanford University \hfill August 2024
     \item \textit{Google Data Analytics Professional} - Issued by: Google \hfill July 2023
-    \item \textit{Financial Engineering and Artificial Intelligence in Python} - Issued by: Udemy \hfill August 2023
+    \item \textit{Financial Engineering and Artificial Intelligence in Python} - Issued by: Udemy \hfill August 2024
 \end{itemize}
 
 % \vspace{6pt}
@@ -138,9 +142,9 @@
 \vspace{6pt}
 
 \textbf{Technical Skills}\\
-\hspace*{7pt} Programming Language: Python, SQL, R, C++, C, Java, HTML, CSS, LaTex, Markdown\\
+\hspace*{7pt} Programming Language: Python, SQL, C++, C, HTML, CSS, LaTex, Markdown\\
 \hspace*{7pt} Programming Libraries: PyTorch, Scikit-learn, Pandas, NumPy, Matplotlib, Seaborn, Plotly\\
-\hspace*{7pt} Applications: Excel, Power BI, Tableau, Adobe Photoshop \& Lightroom, Git, GitHub
+\hspace*{7pt} Applications: Excel, Power BI, Tableau, Git, GitHub
 
 \textbf{Language:} Thai (Native), English
 
