--- a/main.tex
+++ b/main.tex
@@ -24,7 +24,7 @@
     \\
     \href{www.linkedin.com/in/pupipatsk}{\faLinkedin\ LinkedIn.com/pupipatsk}
     \textbullet\ \href{https://github.com/pupipatsk}{\faGithub\ Github.com/pupipatsk}
-    \textbullet\ \href{https://pupipatsk.github.io/Resume/}{\faGlobe\ https://pupipatsk.github.io/Resume/}
+    \textbullet\ \href{https://pupipatsk.github.io/resume/}{\faGlobe\ https://pupipatsk.github.io/resume/}
 \end{center}
 % -------------------------------------------------- Education --- %
 \textbf{EDUCATION}
