--- a/main.tex
+++ b/main.tex
@@ -61,7 +61,7 @@
     \begin{itemize}[noitemsep, topsep=0pt, partopsep=0pt, parsep=0pt, leftmargin=*]
         \item Developed an ensemble machine learning model to predict used car prices, aiding informed automotive loan decisions.
         \item Conducted comprehensive data collection and cleaning from a real-world business dataset, integrating macro-, and micro-economic factors.
-        \item Utilized time-series cluster analysis and Bayesian optimization techniques.
+        \item Utilized time-series analysis and Bayesian optimization techniques.
     \end{itemize}
     }
     \item \textit{Loss On Sale Forecasting}
